<resources>
    <string name="triominos">Triominos</string>
    <string name="_2_jugadores">2 Jugadores</string>
    <string name="_3_jugadores">3 jugadores</string>
    <string name="_4_jugadores">4 Jugadores</string>
    <string name="robar">Introduce si ha robado o no ficha</string>
    <string name="no_roba">No roba</string>
    <string name="actualizar">Siguiente Jugador</string>
    <string name="triple_hexagono">Triple</string>
    <string name="trihex">TriHex</string>
    <string name="doble_hexagono">Doble</string>
    <string name="dobhex">DobHex</string>
    <string name="hexag">Hexágono</string>
    <string name="pue">Puente</string>
    <string name="bonus">Introduce si ha obtenido o no algún bonus</string>
    <string name="num_ficha">Introduce los números de la ficha colocada</string>
    <string name="roba_3_no">3 y no coloca</string>
    <string name="roba_3_si">3</string>
    <string name="roba_2">2</string>
    <string name="roba_1">1</string>
    <string name="nada">Nada</string>
    <string name="jug_1">Jugador 1:</string>
    <string name="jug_2">Jugador 2:</string>
    <string name="jug_3">Jugador 3:</string>
    <string name="jug_4">Jugador 4:</string>
    <string name="error_vac">Los nombres no pueden estar vacíos</string>
    <string name="error_igu">Los nombres no pueden ser iguales</string>
    <string name="finalizar">Finalizar Partida</string>
    <string name="doble_hex">Doble Hexágono</string>
    <string name="triple_hex">Triple Hexágono</string>
    <string name="motivo_fin">Selecciona el motivo del final de la partida:</string>
    <string name="sin_fichas">Jugador sin fichas</string>
    <string name="no_poner_ficha">No se puede poner ficha</string>
    <string name="sumar_ficha">Sumar Ficha</string>
    <string name="ultima_ficha">Última ficha añadida:</string>
    <string name="borrar_ultima">Borrar Última ficha</string>
    <string name="suma_total">Suma total de las fichas:</string>
    <string name="siguiente_jugador">Siguiente Jugador</string>
    <string name="ganador">Y el ganador es...</string>
    <string name="continuar">Continuar</string>
    <string name="restar">Restar Ficha</string>
    <string name="devolver">Devolver Última Ficha</string>
    <string name="reiniciar">Reiniciar Aplicación</string>
</resources>