<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linLay12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motivo_fin"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rdg4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdbtnJug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sin_fichas"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rdbtnFic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_poner_ficha" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linLay14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Spinner
                android:id="@+id/spnJug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/continuar" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtFicJug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linLay13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spnP4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/num"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Spinner
                android:id="@+id/spnP5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/num"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spnP6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/num"
                android:minHeight="48dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAFic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/sumar_ficha" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtUFic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ultima_ficha"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNUFic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnBUFic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/borrar_ultima" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSTFic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suma_total"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTFic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSJug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/siguiente_jugador" />

        <TableLayout
            android:id="@+id/tblLay3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableRow
                android:id="@+id/tblRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtJug_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtPun3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/btnGan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/ganador" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>